--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Smart Village
       </div>
       <div class="villages">
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Gharuan</h2>
@@ -31,7 +31,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Mamupur</h2>
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Rurki</h2>
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Simbal majra</h2>
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Batta</h2>
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="card">
+        <div class="card" onclick="redirect()">
           <div class="filter">
             <div class="cardCt">
               <h2>Mankheri</h2>
@@ -82,6 +82,10 @@
   <footer>
 
   </footer>
-
+  <script type="text/javascript">
+    function redirect() {
+      window.location = "history.html";
+    }
+  </script>
   </body>
 </html>
