history page mobile optimized

--- a/history.html
+++ b/history.html
@@ -6,15 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="css/history.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
+    <script src="js/jquery.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
   </head>
   <body>
     <header class="shdw3">
+      <div class="menuBtn">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
       <h1 class="logo">
         Smart Village
       </h1>
     </header>
 
+    <div id="filter"></div>
     <section id="sideNav" class="shdw2">
       <div class="list">
         <div class="itemLogo">
@@ -136,5 +143,6 @@ Ut maximus diam vel tristique maximus. Praesent et diam tortor. Praesent sed fac
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a lacinia massa, id ultrices mauris. Aliquam eget vo
       </div>
     </section>
+    <script src="js/history.js"></script>
   </body>
 </html>
