--- a/history.html
+++ b/history.html
@@ -23,30 +23,39 @@
 
     <div id="filter"></div>
     <section id="sideNav" class="shdw2">
-      <div class="list">
+      <div class="list" data-tab="#history">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Sample link 1
+          Village History
         </div>
       </div>
 
-      <div class="list">
+      <div class="list" data-tab="#collages">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Sample link 2
+          Collages
         </div>
       </div>
 
-      <div class="list">
+      <div class="list" data-tab="#schools">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Sample link 3
+          Schools
+        </div>
+      </div>
+
+      <div class="list" data-tab="#hospitals">
+        <div class="itemLogo">
+          <i class="fas fa-address-book fa-2x" color="#aaa"></i>
+        </div>
+        <div class="item">
+          Hospitals
         </div>
       </div>
 
@@ -108,18 +117,29 @@
     </section>
     <!-- End sideNav -->
     <section id="ct" class="shdw2">
-      <div class="img">
-        <p>Sample Image</p>
-        <h2>Village Name</h2>
+      <div id="history" class="tab">
+        <div class="img">
+          <p>Sample Image</p>
+          <h2>Village Name</h2>
+        </div>
+        <div class="content">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a lacinia massa, id ultrices mauris. Aliquam eget volutpat ex. Pellentesque gravida mattis enim, at consectetur libero blandit sit amet. Nam vitae massa ut diam consequat posuere ac et magna. Curabitur ut sodales ligula, in suscipit leo. Duis scelerisque vel lorem a volutpat. Sed accumsan placerat metus faucibus placerat. Morbi finibus gravida purus id tempor. In ut tortor finibus, dictum nulla nec, venenatis lorem. Vestibulum diam leo, interdum at eleifend vitae, varius euismod odio. Etiam at pellentesque metus, id ornare mauris. Nunc cursus odio a sagittis ullamcorper. Praesent pharetra ut nisl non condimentum. Praesent tortor quam, ultricies nec metus vel, eleifend laoreet tellus. Nullam tempor mauris non faucibus egestas. Vivamus consectetur neque at finibus semper.
+
+          Nulla et feugiat ipsum. Duis lacinia tincidunt mi, in auctor nisi pellentesque vel. Proin ut enim eu sapien pulvinar varius vel nec nibh. Aenean mauris erat, efficitur nec porttitor nec, gravida sit amet augue. Vestibulum vel fringilla massa, quis placerat massa. Etiam orci sem, lacinia eu purus sed, pulvinar porttitor nibh. Aliquam erat volutpat. Maecenas efficitur, sapien vitae maximus condimentum, massa dolor porttitor metus, sit amet vestibulum enim sem ac nisl. Praesent eu libero fringilla, consequat erat porttitor, tristique justo. Proin condimentum nunc facilisis, placerat lorem non, ultrices nunc. Aliquam gravida vestibulum ex, in eleifend neque sollicitudin id. Duis eleifend accumsan lorem, volutpat lobortis arcu fringilla id. Curabitur maximus magna mattis mauris semper tincidunt. Proin condimentum leo a bibendum ullamcorper. Fusce blandit augue vel est porta suscipit. Nullam tincidunt lectus at arcu sagittis, non semper justo sodales.
+
+          Nunc risus turpis, iaculis vel dapibus a, aliquet nec ante. Sed ipsum sem, aliquam sit amet ultricies id, mattis pretium metus. Morbi mattis ligula viverra, tincidunt ex non, varius risus. Fusce suscipit tristique egestas. Vivamus dapibus ullamcorper turpis, sit amet ullamcorper lorem fermentum et. Donec tempor ipsum commodo, mollis ipsum congue, feugiat orci. Maecenas enim justo, pulvinar condimentum enim non, pretium pellentesque mauris.
+
+          Ut maximus diam vel tristique maximus. Praesent et diam tortor. Praesent sed facilisis lectus. Curabitur et scelerisque tellus, in dapibus nulla. Nam luctus vehicula mollis. Etiam faucibus nibh est, ut malesuada metus blandit eget. Ut congue venenatis elit eget ullamcorper.
+        </div>
       </div>
-      <div class="history">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris a lacinia massa, id ultrices mauris. Aliquam eget volutpat ex. Pellentesque gravida mattis enim, at consectetur libero blandit sit amet. Nam vitae massa ut diam consequat posuere ac et magna. Curabitur ut sodales ligula, in suscipit leo. Duis scelerisque vel lorem a volutpat. Sed accumsan placerat metus faucibus placerat. Morbi finibus gravida purus id tempor. In ut tortor finibus, dictum nulla nec, venenatis lorem. Vestibulum diam leo, interdum at eleifend vitae, varius euismod odio. Etiam at pellentesque metus, id ornare mauris. Nunc cursus odio a sagittis ullamcorper. Praesent pharetra ut nisl non condimentum. Praesent tortor quam, ultricies nec metus vel, eleifend laoreet tellus. Nullam tempor mauris non faucibus egestas. Vivamus consectetur neque at finibus semper.
-
-Nulla et feugiat ipsum. Duis lacinia tincidunt mi, in auctor nisi pellentesque vel. Proin ut enim eu sapien pulvinar varius vel nec nibh. Aenean mauris erat, efficitur nec porttitor nec, gravida sit amet augue. Vestibulum vel fringilla massa, quis placerat massa. Etiam orci sem, lacinia eu purus sed, pulvinar porttitor nibh. Aliquam erat volutpat. Maecenas efficitur, sapien vitae maximus condimentum, massa dolor porttitor metus, sit amet vestibulum enim sem ac nisl. Praesent eu libero fringilla, consequat erat porttitor, tristique justo. Proin condimentum nunc facilisis, placerat lorem non, ultrices nunc. Aliquam gravida vestibulum ex, in eleifend neque sollicitudin id. Duis eleifend accumsan lorem, volutpat lobortis arcu fringilla id. Curabitur maximus magna mattis mauris semper tincidunt. Proin condimentum leo a bibendum ullamcorper. Fusce blandit augue vel est porta suscipit. Nullam tincidunt lectus at arcu sagittis, non semper justo sodales.
-
-Nunc risus turpis, iaculis vel dapibus a, aliquet nec ante. Sed ipsum sem, aliquam sit amet ultricies id, mattis pretium metus. Morbi mattis ligula viverra, tincidunt ex non, varius risus. Fusce suscipit tristique egestas. Vivamus dapibus ullamcorper turpis, sit amet ullamcorper lorem fermentum et. Donec tempor ipsum commodo, mollis ipsum congue, feugiat orci. Maecenas enim justo, pulvinar condimentum enim non, pretium pellentesque mauris.
-
-Ut maximus diam vel tristique maximus. Praesent et diam tortor. Praesent sed facilisis lectus. Curabitur et scelerisque tellus, in dapibus nulla. Nam luctus vehicula mollis. Etiam faucibus nibh est, ut malesuada metus blandit eget. Ut congue venenatis elit eget ullamcorper.
+      <div id="collages" class="tab">
+        Test Content Collages
+      </div>
+      <div id="hospitals" class="tab">
+        Test Content hospitals
+      </div>
+      <div id="schools" class="tab">
+        Test Content Schools
       </div>
     </section>
     <!-- content -->
