--- a/history.html
+++ b/history.html
@@ -23,6 +23,7 @@
 
     <div id="filter"></div>
     <section id="sideNav" class="shdw2">
+    <div class="scroll">
       <div class="list" data-tab="#history">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
@@ -113,7 +114,8 @@
         <div class="item">
           Sample link 9
         </div>
-      </div>
+      </div>      
+    </div>
     </section>
     <!-- End sideNav -->
     <section id="ct" class="shdw2">
