--- a/history.html
+++ b/history.html
@@ -24,7 +24,7 @@
     <div id="filter"></div>
     <section id="sideNav" class="shdw2">
     <div class="scroll">
-      <div class="list" data-tab="#history">
+      <div class="list active" data-tab="#history">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
@@ -114,12 +114,12 @@
         <div class="item">
           Sample link 9
         </div>
-      </div>      
+      </div>
     </div>
     </section>
     <!-- End sideNav -->
-    <section id="ct" class="shdw2">
-      <div id="history" class="tab">
+    <section id="ct">
+      <div id="history" class="tab shdw2" style="background: #fff">
         <div class="img">
           <p>Sample Image</p>
           <h2>Village Name</h2>
@@ -135,14 +135,68 @@
         </div>
       </div>
       <div id="collages" class="tab">
-        Test Content Collages
+          <div class="search">
+            <input type="text" name="q" placeholder="Search here">
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
       </div>
       <div id="hospitals" class="tab">
-        Test Content hospitals
+        <div class="search">
+          <input type="text" name="q" placeholder="Search here">
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
       </div>
       <div id="schools" class="tab">
-        Test Content Schools
+        <div class="search">
+          <input type="text" name="q" placeholder="Search here">
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
+        <div class="listItem shdw1">
+          <div class="itemImg">
+
+          </div>
+        </div>
       </div>
+
+      <!-- Add new tabs for the links here  -->
+
     </section>
     <!-- content -->
     <section id="rightNav" class="shdw2">
