--- a/index.html
+++ b/index.html
@@ -23,55 +23,55 @@
         Smart Village
       </div>
       <div class="villages">
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('gharuan.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Gharuan</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <p>Gharuan is a village panchayat located in the SAS Nagar district of Punjab state,India. The other nearest state capital from Gharuan is Chandigarh and its distance is 21.1 KM. </p>
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('mamupur.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Mamupur</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <p>Mampura is a village in Punjab . There is also some Ad Dharmi families on the other side of the village. The vast majority of this village belongs to the Sikh religion, the minority are Hindus.</p>
 
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('rurkee.html')">
           <div class="filter">
             <div class="cardCt">
-              <h2>Rurki</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <h2>Rurkee</h2>
+              <p>Rurkee (Rurki) ਰੁੜਕੀ is a village in Jalandhar district in Punjab. The major caste in Rurkee is Jatt although there are many Tarkhans in the village. </p>
 
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('simbal.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Simbal majra</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <p>Simbal village is located in Pathankot Tehsil of Gurdaspur district in Punjab, India. It is situated 35km away Pathankot. </p>
 
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('batta.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Batta</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <p>Batta is a medium size village located in Kharar Tehsil of Mohali district, Punjab with total 217 families residing.   </p>
 
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect()">
+        <div class="card" onclick="redirect('mankheri.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Mankheri</h2>
-              <p>As the image will be scaled to create a zoom effect inside the container, the .container CSS class will define the size of the image. ... Next, attach a hover event CSS class to the container, which uses the transform CSS3 property to scale the image to 120%. One of the values of the transform property is scale().</p>
+              <p>Mankheri is a Village in Morinda Tehsil in Rupnagar District of Punjab State, India. It is located 6 KM from Morinda Rural.</p>
 
             </div>
           </div>
@@ -83,8 +83,8 @@
 
   </footer>
   <script type="text/javascript">
-    function redirect() {
-      window.location = "history.html";
+    function redirect(data) {
+      window.location = data;
     }
   </script>
   </body>
