--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <!-- End SideNav -->
     <section id="content">
       <div class="heading">
-        Smart Village
+        Smart Villages
       </div>
       <div class="villages">
         <div class="card" onclick="redirect('gharuan.html')">
