--- a/batta.html
+++ b/batta.html
@@ -33,12 +33,12 @@
         </div>
       </div>
 
-      <div class="list" data-tab="#collages">
+      <div class="list" data-tab="#College">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Collages
+          College
         </div>
       </div>
 
@@ -162,7 +162,7 @@ Rayat Bahra Institute Of Hotel Management<br>
 Address : <br>Sahauran; <br>Mohali12 Kms From Chandigarhpunjab<br>
         </div>
       </div>
-      <div id="collages" class="tab">
+      <div id="College" class="tab">
         <div class="listItem shdw1">
           <div class="itemImg">
 
