--- a/mamupur.html
+++ b/mamupur.html
@@ -33,12 +33,12 @@
         </div>
       </div>
 
-      <div class="list" data-tab="#collages">
+      <div class="list" data-tab="#College">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Collages
+          College
         </div>
       </div>
 
@@ -139,7 +139,7 @@ Ghataur<br>
 Shahpur<br>
         </div>
       </div>
-      <div id="collages" class="tab">
+      <div id="College" class="tab">
         <div class="listItem shdw1">
           <div class="itemImg">
 
