--- a/rurkee.html
+++ b/rurkee.html
@@ -33,12 +33,12 @@
         </div>
       </div>
 
-      <div class="list" data-tab="#collages">
+      <div class="list" data-tab="#College">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Collages
+          College
         </div>
       </div>
 
@@ -120,7 +120,7 @@ Rurkee Kham village has higher literacy rate compared to Punjab. In 2011, litera
 As per constitution of India and Panchyati Raaj Act, Rurkee Kham village is administrated by Sarpanch (Head of Village) who is elected representative of village. Our website, don't have information about schools and hospital in Rurkee Kham village.  <br>
         </div>
       </div>
-      <div id="collages" class="tab">
+      <div id="College" class="tab">
         <div class="listItem shdw1">
           <div class="itemImg">
 
