--- a/simbal.html
+++ b/simbal.html
@@ -33,12 +33,12 @@
         </div>
       </div>
 
-      <div class="list" data-tab="#collages">
+      <div class="list" data-tab="#College">
         <div class="itemLogo">
           <i class="fas fa-address-book fa-2x" color="#aaa"></i>
         </div>
         <div class="item">
-          Collages
+          College
         </div>
       </div>
 
@@ -150,7 +150,7 @@ HOW TO REACH Simbal Majra
 Kharar Rail Way Station , <br>Kurali Rail Way Station are the very nearby railway stations to Simbal Majra. <br>
         </div>
       </div>
-      <div id="collages" class="tab">
+      <div id="College" class="tab">
         <div class="listItem shdw1">
           <div class="itemImg">
 
