--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Smart Villages
       </div>
       <div class="villages">
-        <div class="card" onclick="redirect('gharuan.html')">
+        <div class="card" id="gharuan" onclick="redirect('gharuan.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Gharuan</h2>
@@ -31,7 +31,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect('mamupur.html')">
+        <div class="card" id="mamupur" onclick="redirect('mamupur.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Mamupur</h2>
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect('rurkee.html')">
+        <div class="card" id="rurkee" onclick="redirect('rurkee.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Rurkee</h2>
@@ -49,7 +49,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect('simbal.html')">
+        <div class="card" id="simbal" onclick="redirect('simbal.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Simbal majra</h2>
@@ -58,7 +58,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect('batta.html')">
+        <div class="card" id="batta" onclick="redirect('batta.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Batta</h2>
@@ -67,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="card" onclick="redirect('mankheri.html')">
+        <div class="card" id="mankheri" onclick="redirect('mankheri.html')">
           <div class="filter">
             <div class="cardCt">
               <h2>Mankheri</h2>
