--- a/batta.html
+++ b/batta.html
@@ -101,7 +101,7 @@ Driving License        </div>
     <!-- End sideNav -->
     <section id="ct">
       <div id="history" class="tab shdw2" style="background: #fff">
-        <div class="img" style="background-image: url(http://www.sikhiwiki.org/images/5/5f/Akalgarhsahibgharuan.jpg);
+        <div class="img" style="background-image: url('images/batta.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;">
