--- a/gharuan.html
+++ b/gharuan.html
@@ -109,7 +109,7 @@ Driving License        </div>
         </div>
         <div class="content">
             <h2 style="float:left; color: #000; position: static; margin-bottom: 20px; ">Gharuan</h2>
-
+<h2>Sarpanch - Gurdeep Singh</h2><br><h3>Contact - 9872066206</h3>
           Gharuan is a village panchayat located in the SAS Nagar district of Punjab state,India. The latitude 30.7744 and longitude 76.561532 are the geocoordinate of the Gharuan. Chandigarh is the state capital for Gharuan village. It is located around 21.1 kilometer away from Gharuan.. The other nearest state capital from Gharuan is Chandigarh and its distance is 21.1 KM. The other surrouning state capitals are Chandigarh 21.1 KM., Shimla 68.2 KM., Dehradun 155.9 KM.,
 <br>
 The surrounding nearby villages and its distance from Gharuan are Machhipur 3.4 KM , Padiala 4.2 KM , Sahauran 4.2 KM , Radiala 8.1 KM , Balongi 13.6 KM , Badmajra 14.0 KM , Maujpur 15.3 KM , Sukhgarh 18.6 KM , Tangori 24.3 KM , Mattran , Jagatpura , .
